--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/logo32x32.ico",
               "src/assets"
             ],
             "styles": [
