--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "rxjs": "~7.5.0",
+    "telegraf": "^4.12.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
