--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
+    "mongodb-legacy": "^5.0.0",
     "rxjs": "~7.5.0",
     "telegraf": "^4.12.2",
     "tslib": "^2.3.0",
